# ganesha_fun_world_backend

./: .env.template  .gitignore  Dockerfile.prod  Dockerfile.test  docker-compose-prod.yml  docker-compose-test.yml  manage.py  pyproject.toml  readme.md  requirements.txt  supervisor-test.conf  supervisor.conf
bookings/: admin.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py  webhook_utils.py
bookings/migrations/: 0001_initial.py  0002_alter_bookingcostume_id_alter_bookinglocker_id.py  0002_rename_adult_booking_adult_male_booking_adult_female_and_more.py  0003_alter_booking_options_alter_bookingcanteen_options_and_more.py  0004_bookingcostume_issued_quantity.py  0005_bookingcostume_remark.py  0006_booking_returned_amount_alter_payment_payment_for.py  0007_booking_locker_amount.py  0008_bookinglocker_is_returned.py  0009_rename_costume_amount_booking_costume_received_amount_and_more.py  0010_alter_bookinglocker_locker.py  0011_booking_total_checked_in.py
bookings/templates/: admin_dashboard.html  base.html  bouncer_summary.html  privacy_policy.html  success_screen.html
bookings/ticket/: utils.py
common_config/: common.py
custom_auth/: admin.py  forms.py  models.py
custom_auth/migrations/: 0001_initial.py  0002_user_user_type.py
frontend/: urls.py  views.py
frontend/ganeshaFrontend/: package.json
ganesha_fun_world_backend/: asgi.py  urls.py  wsgi.py
ganesha_fun_world_backend/settings/: common.py  prod.py  test.py
management_core/: admin.py  apps.py  forms.py  models.py  resources.py  urls.py  views.py
management_core/migrations/: 0001_initial.py  0002_alter_costume_options_alter_locker_options_and_more.py  0002_ticketprice.py  0003_alter_locker_locker_number.py  (+3 more)
whatsapp/: config.py  urls.py  utils.py  views.py
(+36 files in other folders)
